add pretty colors to message

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -81,7 +81,7 @@
     <div id="results" ng-show="metadata">
       <h2>Results:</h2>
 
-      <div class="panel panel-info" ng-class="{panle-danger: error}">
+      <div class="panel" ng-class="{'panel-danger': errors, 'panel-success': products}">
         <div class="panel-heading">
           <h3 class="panel-title">Lemur says...</h3>
         </div>
