--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -24,6 +24,10 @@ body {
   padding-bottom: 19px;
 }
 
+.main-view {
+  margin: 20px 0;
+}
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
@@ -96,15 +100,46 @@ body {
   border: 3px dotted #E2E2E2;
 }
 
+#results {
+  min-height: 600px;
+}
+
+.lemur {
+  background-image: url('http://freewallpapers4desktop.com/wallpapers/lemur_holding_the_cable-1920x1200.jpg');
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  text-align: left;
+  color: white;
+  padding: 25px;
+  font-size: 22px;
+}
+
 .product-list > li {
   margin-bottom: 30px;
   list-style: none;
 }
 
-.product-list > li > img {
+.product-list li .img-container {
   width: 100px;
+  height: 150px;
   float: left;
   margin-right: 20px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.product-list li .product-url {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.popover {
+  max-width: 1000px;
 }
 
 dl {
