--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -142,6 +142,12 @@ body {
   max-width: 1000px;
 }
 
+.pagination > li {
+display: inline-block;
+vertical-align: middle;
+}
+
+
 dl {
   margin-bottom: 0px;
 }
